# anima-reborn

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
src/anima_reborn/: CLAUDE.md  __init__.py  align.py  base.py  conversation.py  coupled.py  crystal.py  dialogue.py  emergence.py  info.py  pipeline.py  rate.py  repulsion.py  sequence.py  substrate.py  words.py
state/: CLAUDE.md
state/communication/: RESULTS.md  accumulation.py  aligned_drive.py  alternating_coupling.py  attractor_canonicalization.py  capacity.py  concepts.py  context_composition.py  context_modulation.py  context_rate_gate.py  context_synergy.py  conversation_channel.py  depth_hold.py  dialogue.py  english_bottleneck.py  handshake.py  match.py  (+16 more)
tests/: test_accumulation.py  test_align.py  test_base.py  test_ceiling_is_width_at_budget.py  test_context_composition.py  test_context_modulation.py  test_context_rate_gate.py  test_context_synergy.py  test_conversation.py  test_conversation_channel.py  test_coupled.py  test_crystal.py  test_depth_hold.py  test_dialogue.py  test_dialogue_session.py  test_directed.py  test_emergence.py  test_english_bottleneck.py  test_iit4.py  test_info.py  test_integrated_context.py  test_integrated_rate.py  test_phi_proxy.py  test_pipeline.py  test_rate.py  test_rate_chain.py  test_rate_code.py  test_repulsion.py  test_retention.py  test_rhythm.py  test_scale_ceiling.py  test_scaling_law.py  test_sequence.py  test_signaling.py  test_substrate.py  test_transient_context.py  test_transient_gate.py  test_verdict_chain_sweep.py  test_viewer.py  test_wide_integration.py  (+2 more)
(+41 files in other folders)
