[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "anima-reborn"
version = "0.1.0"
description = "The anima-experience consciousness engines as headless, seedable Python"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["mutual-information", "entropy", "emergence", "time-crystal", "ising"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.urls]
Homepage = "https://github.com/dancinlab/anima-reborn"
Origin = "https://github.com/dancinlab/anima-experience"

[tool.hatch.build.targets.wheel]
packages = ["src/anima_reborn"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q --strict-markers"
